# llamaindex_study

./: .gitignore  README.md  pyproject.toml
blog_tutorials/: advanced_1.ipynb  advanced_2.ipynb  basic_rag(kor).ipynb
blog_tutorials/embeddings/: default__vector_store.json  docstore.json  index_store.json
huggingface/: 1.ipynb
huggingface/alfred_chroma_db/: chroma.sqlite3
official_document/: Introduction_Indexes.ipynb  Introduction_RAG.ipynb  Introduction_Retriever.ipynb  agents.ipynb  api_example.ipynb  base.ipynb  multistepquery.ipynb  temp.py
official_document/pipeline_storage/: llama_cache
official_document/storage/: default__vector_store.json  docstore.json  index_store.json
private_doc/: agent.ipynb  embedding.ipynb  joke.txt  joke_flow_all.html  joke_flow_recent.html  matadata.ipynb  memory.ipynb  parser.ipynb  prompting.ipynb  query_transform.ipynb  react_rag.ipynb  temp.py  tools.ipynb  vectorDB.ipynb  workflows.ipynb
private_doc/storage/lyft/: index_store.json
