[project]
name = "llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.15",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "llama-index>=0.12.46",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-huggingface-api>=0.5.0",
    "llama-index-vector-stores-chroma>=0.4.2",
    "llama-index-vector-stores-pinecone>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "load-dotenv>=0.1.0",
    "pinecone>=7.3.0",
    "spacy>=3.8.7",
]
